# awo

./: .gitignore  AGENTS.md  AGENT_NEUTRAL_CONTEXT_SKILLS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_ARCHITECTURE.md  Cargo.toml  DEVELOPMENT_PLAN.md  INTERFACE_STRATEGY.md  LICENSE  MANUAL_TEST_SCENARIOS.md  MIDDLEWARE_MODE.md  NAMING.md  PLATFORM_STRATEGY.md  PRODUCT_SPEC.md  PROJECT.md  PUBLIC_TESTBED_EVALUATION.md  PUBLIC_TRIAL_FINDINGS.md  README.md  RUNTIME_ADAPTER_SPEC.md  SECURITY.md  TEAM_MANIFEST_SPEC.md  TESTING_GUIDE.md  V1_ROADMAP.md  deny.toml  findings.md  progress.md  project.md  smoke_test.sh  task_plan.md  windows_checklist_report.json  windows_checklist_report.md  windows_live_check.ps1
.github/: pull_request_template.md
analysis/: 2026-03-21-public-trial-findings.md  2026-03-23 grok-review.md
crates/awo-app/: Cargo.toml
crates/awo-app/src/: awod.rs  cli.rs  handlers.rs  main.rs  output.rs  tui.rs
crates/awo-app/src/tui/: action_router.rs  forms.rs  keymap.rs  widgets.rs
crates/awo-app/src/tui/action_router/: dashboard.rs  dialogs.rs
crates/awo-app/tests/: json_cli.rs  operator_flows.rs
crates/awo-core/: Cargo.toml
crates/awo-core/src/: app.rs  capabilities.rs  commands.rs  config.rs  context.rs  daemon.rs  diagnostics.rs  dispatch.rs  error.rs  events.rs  fingerprint.rs  git.rs  lib.rs  platform.rs  repo.rs  routing.rs  runtime.rs  skills.rs  slot.rs  snapshot.rs  store.rs  team.rs
crates/awo-core/src/app/: team_ops.rs  tests.rs
crates/awo-core/src/commands/: context.rs  repo.rs  review.rs  session.rs  skills.rs  slot.rs  team.rs  tests.rs
crates/awo-core/src/runtime/: supervisor.rs  tests.rs
crates/awo-core/src/runtime/supervisor/: conpty.rs  tmux.rs
crates/awo-core/src/skills/: catalog.rs  install.rs  tests.rs
crates/awo-core/src/snapshot/: overlap.rs
crates/awo-core/src/store/: tests.rs
crates/awo-core/src/team/: reconcile.rs  storage.rs  tests.rs
crates/awo-core/tests/: command_flows.rs  fingerprint.rs  negative_paths.rs  repo_management.rs
crates/awo-mcp/: Cargo.toml
crates/awo-mcp/src/: main.rs  protocol.rs  server.rs
demos/: cleanup-manual-slot.sh  scenario-01-first-contact.tape  scenario-05-tui-dashboard.tape
docs/: agent-neutral-context-skills.md  interface-strategy.md  middleware-design.md  naming.md  open-source-release-checklist.md  platform-strategy.md  product-spec.md  release-process.md  repo-profile-spec.md  subagent-orchestration.md  team-manifest-spec.md  tokio-decision.md  v1-control-surface.md  v1-roadmap.md
planning/: 2026-03-21-project.md  2026-03-22-development-plan.md  2026-03-22-status-roadmap.md  2026-03-24-next-moves.md  2026-03-25-full-audit-report.md  2026-03-26-tui-setup-parity-plan.md  2026-03-27-lead-agent-task-card-orchestration-plan.md  2026-03-27-master-finalization-plan.md  2026-03-27-next-iterations-plan.md  2026-03-28-audit-and-quality-review.md  2026-03-28-next-sessions-plan.md  2026-03-28-next-stages-execution-plan.md  2026-03-28-release-finalization-audit.md  2026-04-01-terminal-workspace-plan.md  job-card-A-tui-input-and-help.md  job-card-AA-configurable-storage-roots.md  job-card-B-background-git-ops.md  job-card-C-live-log-tailing.md  job-card-D-git-status-caching.md  job-card-E-negative-path-tests.md  job-card-F-review-intelligence.md  job-card-G-tui-filtering.md  job-card-H-session-timeout.md  job-card-K-daemon-lifecycle.md  job-card-L-cli-auto-start-daemon.md  job-card-M-team-task-delegate.md  job-card-N-tui-team-dashboard.md  job-card-O-broker-hardening-and-daemon-ux.md  job-card-P-orchestration-test-depth.md  job-card-Q-immutable-task-recovery.md  job-card-R-windows-parity-completion.md  job-card-S-middleware-local-enrichment.md  job-card-T-orchestration-intelligence.md  job-card-U-release-finalization.md  job-card-V-broker-health-and-lifecycle-slice.md  job-card-W-fingerprint-reconcile-test-lane.md  (+7 more)
(+8 files in other folders)
