[package]
name = "awo-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "awo"
path = "src/main.rs"

[[bin]]
name = "awod"
path = "src/awod.rs"

[dependencies]
anyhow = "1.0.102"
awo-core = { path = "../awo-core" }
clap = { version = "4.6.0", features = ["derive", "env"] }
crossbeam-channel = "0.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
