[package]
name = "awo-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
toml = "1.0.7"

[dev-dependencies]
tempfile = "3.23.0"
