[package]
name = "awo-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
directories = "6.0.0"
fs2 = "0.4.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
toml = "1.0.7"
tracing = "0.1.44"

[target.'cfg(windows)'.dependencies]
portable-pty = "0.8"

[dev-dependencies]
anyhow = "1.0.102"
tempfile = "3.23.0"
