[package]
name = "awo-mcp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "awo-mcp"
path = "src/main.rs"

[dependencies]
awo-core = { path = "../awo-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
